# integrationbuddy-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: UpdateDialog.tsx
src/components/Chat/: ChatHeader.tsx  ChatPage.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx  TypingIndicator.tsx
src/components/Setup/: SetupPage.tsx
src/components/common/: Avatar.tsx  AvatarUpload.tsx  TitleBar.tsx
src/hooks/: useUpdater.ts  useWebhook.ts
src/store/: appStore.ts
src/types/: index.ts
